# DuckChat

./: CMakeLists.txt  config.ini
Sources/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LoginSystem.cpp  MariaDao.cpp  MariaPool.cpp  RedisConPool.cpp  RedisMgr.cpp  VerifyGrpcClient.cpp  main.cpp
Sources/headers/: AsioIOServicePool.h  CServer.h  ConfigMgr.h  HttpConnection.h  LoginSystem.h  MariaDao.h  MariaPool.h  RedisConPool.h  RedisMgr.h  Singleton.h  VerifyGrpcClient.h  global.h
Sources/protos/: verify.grpc.pb.cc  verify.grpc.pb.h  verify.pb.cc  verify.pb.h
include/boost-1_86/boost/: any.hpp  cstdint.hpp
lib/cmake/boost_atomic-1.86.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_atomic-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_atomic-variant-mgw13-mt-x32-1_86-static.cmake  libboost_atomic-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_charconv-1.86.0/: boost_charconv-config.cmake  libboost_charconv-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_charconv-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_charconv-variant-mgw13-mt-x32-1_86-static.cmake  libboost_charconv-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_chrono-1.86.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_chrono-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_chrono-variant-mgw13-mt-x32-1_86-static.cmake  libboost_chrono-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_container-1.86.0/: boost_container-config.cmake  libboost_container-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_container-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_container-variant-mgw13-mt-x32-1_86-static.cmake  libboost_container-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_context-1.86.0/: boost_context-config.cmake  libboost_context-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_context-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_context-variant-mgw13-mt-x32-1_86-static.cmake  libboost_context-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_contract-1.86.0/: boost_contract-config.cmake  libboost_contract-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_contract-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_contract-variant-mgw13-mt-x32-1_86-static.cmake  libboost_contract-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_coroutine-1.86.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_coroutine-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_coroutine-variant-mgw13-mt-x32-1_86-static.cmake  libboost_coroutine-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_date_time-1.86.0/: boost_date_time-config.cmake  libboost_date_time-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_date_time-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_date_time-variant-mgw13-mt-x32-1_86-static.cmake  libboost_date_time-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_exception-1.86.0/: boost_exception-config.cmake
lib/cmake/boost_fiber-1.86.0/: boost_fiber-config.cmake  libboost_fiber-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_fiber-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_fiber-variant-mgw13-mt-x32-1_86-static.cmake  libboost_fiber-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_filesystem-1.86.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_filesystem-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_filesystem-variant-mgw13-mt-x32-1_86-static.cmake  libboost_filesystem-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_graph-1.86.0/: boost_graph-config.cmake  libboost_graph-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_graph-variant-mgw13-mt-d-x64-1_86-static.cmake  libboost_graph-variant-mgw13-mt-x32-1_86-static.cmake  libboost_graph-variant-mgw13-mt-x64-1_86-static.cmake
lib/cmake/boost_graph_parallel-1.86.0/: boost_graph_parallel-config.cmake
lib/cmake/boost_headers-1.86.0/: boost_headers-config.cmake
lib/cmake/boost_iostreams-1.86.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-mgw13-mt-d-x32-1_86-static.cmake  libboost_iostreams-variant-mgw13-mt-d-x64-1_86-static.cmake  (+2 more)
sql/: create_tables.sql
(+161 files in other folders)
